2011-09-02  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/OrdinaryAtomTable.hpp: Freed OrdinaryAtomTable from Instantiation indexing.
	* include/dlvhex/Atoms.hpp: Likewise.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* src/dlvhex/MLPSolver.cpp: Likewise.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* include/dlvhex/MLPSyntaxChecker.hpp: Fixed problem posed by deleting ModuleSyntaxChecker.hpp.
	* src/dlvhex/MLPSyntaxChecker.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.

	* include/dlvhex/ModuleSyntaxChecker.hpp: Separates ModuleSyntaxChecker.hpp into MLPSyntaxChekcer.hpp and MLPSyntaxChekcer.cpp.
	* include/dlvhex/MLPSyntaxChecker.hpp: Likewise.
	* include/dlvhex/Makefile.am: Likewise.
	* src/dlvhex/MLPSyntaxChecker.cpp: Likewise.
	* src/dlvhex/Makefile.am: Likewise.
	* testsuite/Makefile.am: Likewise.

2011-09-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/MLPSolver.cpp (printCallGraph): Fix clang FTBFS
	"variable length array of non-POD element type".

2011-09-01  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/Makefile.am (EXTRA_DIST): Add missing examples.

	* include/dlvhex/Makefile.am (pkginclude_HEADERS): Add Module.hpp,
	ModuleTable.hpp, ModuleAtomTable.hpp, MLPSolver.hpp,
	PredicateTable.hpp, ModuleSyntaxChecker.hpp, Predicate.hpp.

	* include/dlvhex/NamesTable.h: Remove.
	* include/dlvhex/Program.h: Likewise.
	* src/dlvhex/Atom.cpp: Likewise.
	* src/dlvhex/Term.cpp: Likewise.

	* configure.ac: Fix version.

	* NEWS: Update.

	* AUTHORS: Add Tri.

2011-09-01  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Separate MLPSolver.hpp and MLPSolver.cpp.
	* src/dlvhex/MLPSolver.cpp: Likewise.
	* src/dlvhex/Makefile.am: Likewise.
	* include/dlvhex/OrdinaryAtomTable.hpp: Likewise.
	* testsuite/Makefile.am: Likewise.

	* src/dlvhex/ProgramCtx.cpp: Fix ProgramCtx.cpp, re-initialize edb and idb.

	* include/dlvhex/HexGrammar.h: Remove left-over code.